[package]
name = "gokaku"
version = "0.1.0"
edition = "2021"
author = "Tomoya Goto"
description = "Gokaku(五格) Calculator"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", default_features = false, features = ["rustls-tls", "blocking", "json"]}
percent-encoding = "2.2"
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
